cluster/apps/wireguard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard-svc
  namespace: wireguard
spec:
  selector:
    app: wireguard
  ports:
    - name: udp
      protocol: UDP
      port: 51820
      targetPort: udp
